# 140218_java_renderscript_ndk

./: .gitignore  .gitmodules  AndroidManifest.xml  build.xml  ndk.sh
jni/: Android.mk  Application.mk  Makefile  Makefile.common.in  README  config.status  configure  configure.ac  filefilter.txt
jni/include/: Allocation.h  Common.h  Rs-jni.h
jni/include/algorithm/: Argb8888_To_Gray.h  Argb8888_To_Gray_Neon.h  Argb8888_To_Gray_Neon_Thread.h  Argb8888_To_Gray_Neon_Thread_Direct.h  Argb8888_To_Gray_Thread.h  Gray_To_Argb8888.h
jni/src/: Allocation.c  Makefile  Rs-jni.c
jni/src/algorithm/: Argb8888_To_Gray.c  Argb8888_To_Gray_Neon.c  Argb8888_To_Gray_Neon_Thread.c  Argb8888_To_Gray_Neon_Thread_Direct.c  Argb8888_To_Gray_Thread.c  Gray_To_Argb8888.c
jni/test/unittest/: AlgorithmTest.cpp  AlgorithmTest.h  AllocationTest.cpp  AllocationTest.h  CMakeLists.txt  Makefile  TestData.cpp  TestData.h  TestDataPool.cpp  TestDataPool.h  TestMain.cpp  test.sh  toolchain.arm.cmake
res/layout/: main.xml
res/raw/: argb8888_gray.bc  helloworld.bc
res/values/: strings.xml
src/kr/pe/cnagune/renderscripttest/: Argb8888_gray.rs  RenderScriptActivity.java  RsJNI.java  helloworld.rs
src/kr/pe/cnagune/renderscripttest/algorithm/: CalcJava.java  CalcNdk.java  CalcNdkNeon.java  CalcNdkNeonThread.java  CalcNdkNeonThreadDirect.java  CalcNdkThread.java  CalcRenderScript.java  ICalc.java
